sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:14: error: not found: value valeurj
        valeurj=getValeur(j)
        ^AlgInsertionSort:22: error: not found: value valeurj
      setValeur(l,valeurj)
                  ^AlgInsertionSort:23: error: not found: value valeurj
      valeurj=valeurj
      ^